--- a/home/templates/includes/navigation.html
+++ b/home/templates/includes/navigation.html
@@ -33,10 +33,9 @@
               class="icon feather icon-bell"></i></a>
           <div class="dropdown-menu dropdown-menu-right notification">
             <div class="noti-head">
-              <h6 class="d-inline-block m-b-0">Notifications</h6>
+              <h6 class="d-inline-block m-b-10">Notifications</h6>
               <div class="float-right">
-                <a href="javascript:" class="m-r-10">mark as read</a>
-                <a href="javascript:">clear all</a>
+                <button class="btn btn-outline-danger m-b-5"  href="javascript:">clear all</button>
               </div>
             </div>
             <ul class="noti-body">
@@ -48,38 +47,36 @@
                   <img class="img-radius" src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="Generic placeholder image">
                   <div class="media-body">
                     <p><strong>John Doe</strong><span class="n-time text-muted"><i
-                          class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                    <p>New ticket Added</p>
+                          class="icon feather icon-user-check m-r-10"></i>Just Now</span></p>
+                    <p>Your class is booked congratulation</p>
                   </div>
                 </div>
               </li>
               <li class="n-title">
-                <p class="m-b-0">EARLIER</p>
+                <p class="m-b-0">EARLIER CLASSES</p>
               </li>
               <li class="notification">
                 <div class="media">
-                  <img class="img-radius" src="{% static 'assets/images/user/avatar-2.jpg' %}" alt="Generic placeholder image">
+                  <img class="img-radius" src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="Generic placeholder image">
                   <div class="media-body">
-                    <p><strong>Joseph William</strong><span class="n-time text-muted"><i
-                          class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                    <p>Prchace New Theme and make payment</p>
+                    <p><strong>John Doe</strong><span class="n-time text-muted"><i
+                          class="icon feather icon-phone-incoming m-r-10"></i>30 min</span></p>
+                    <p>Your Classes going to start</p>
                   </div>
                 </div>
               </li>
               <li class="notification">
                 <div class="media">
-                  <img class="img-radius" src="{% static 'assets/images/user/avatar-3.jpg' %}" alt="Generic placeholder image">
+                  <img class="img-radius" src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="Generic placeholder image">
                   <div class="media-body">
-                    <p><strong>Sara Soudein</strong><span class="n-time text-muted"><i
-                          class="icon feather icon-clock m-r-10"></i>30 min</span></p>
-                    <p>currently login</p>
+                    <p><strong>John Doe</strong><span class="n-time text-muted"><i
+                          class="icon feather icon-phone-off m-r-10"></i>30 min</span></p>
+                    <p>Class Ended</p>
                   </div>
                 </div>
               </li>
             </ul>
-            <div class="noti-footer">
-              <a href="javascript:">show all</a>
-            </div>
+         
           </div>
         </div>
       </li>
