Profile field added and Onboarding works going

--- a/home/templates/includes/sidebar.html
+++ b/home/templates/includes/sidebar.html
@@ -83,11 +83,17 @@
           <a href="{% url 'basic_tables' %}" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
         </li>
-
+        <li data-username="Profile Page" class="nav-item {% if 'profile' in segment %}active{% endif %}"><a href="{% url 'profile' %}" class="nav-link"><span
+          class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile
+          Page</span></a>
+    </li>
+    <li data-username="Tab Page" class="nav-item nav-item {% if 'tab_page' in segment %}active{% endif %}"><a href="{% url 'tab' %}" class="nav-link"><span
+      class="pcoded-micon"><i class="feather icon-target"></i></span><span class="pcoded-mtext">OnBoarding</span></a>
+    </li>
         <li data-username="Sample Page" class="nav-item {% if 'sample_page' in segment %}active{% endif %}"><a href="{% url 'sample_page' %}" class="nav-link"><span
           class="pcoded-micon"><i class="feather icon-target"></i></span><span class="pcoded-mtext">Calendar</span></a>
         </li>
-       
+         
         {% endif %}
       </ul>
     </div>
