--- a/home/templates/pages/index.html
+++ b/home/templates/pages/index.html
@@ -5,13 +5,87 @@
 
   <!-- [ Main Content ] start -->
   <div class="row">
+    
+    <!--[ daily sales section ] start-->
+    <div class="col-md-6 col-xl-4">
+      <div class="card daily-sales">
+        <div class="card-block">
+          <h6 class="mb-4">Current Class Attended</h6>
+          <div class="row d-flex align-items-center">
+            <div class="col-9">
+              <h3 class="f-w-300 d-flex align-items-center m-b-0"><i
+                  class="feather icon-user-check text-c-green f-30 m-r-10"></i>
+                35</h3>
+            </div>
+
+            <div class="col-3 text-right">
+              <p class="m-b-0">67%</p>
+            </div>
+          </div>
+          <div class="progress m-t-30" style="height: 7px;">
+            <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;"
+              aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--[ daily sales section ] end-->
+    <!--[ Monthly  sales section ] starts-->
+    <div class="col-md-6 col-xl-4">
+      <div class="card Monthly-sales">
+        <div class="card-block">
+          <h6 class="mb-4">Classes Missed</h6>
+          <div class="row d-flex align-items-center">
+            <div class="col-9">
+              <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                  class="feather icon-user-x text-c-red f-30 m-r-10"></i>
+                10</h3>
+            </div>
+            <div class="col-3 text-right">
+              <p class="m-b-0">36%</p>
+            </div>
+          </div>
+          <div class="progress m-t-30" style="height: 7px;">
+            <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;"
+              aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="col-md-12 col-xl-4">
+      <div class="card yearly-sales">
+        <div class="card-block">
+          <h6 class="mb-4">Total Classes</h6>
+          <div class="row d-flex align-items-center">
+            <div class="col-9">
+              <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                  class="feather icon-user text-c-green f-30 m-r-10"></i>
+                100</h3>
+            </div>
+            <div class="col-3 text-right">
+              <p class="m-b-0">80%</p>
+            </div>
+          </div>
+          <div class="progress m-t-30" style="height: 7px;">
+            <div class="progress-bar progress-c-theme" role="progressbar" style="width: 70%;"
+              aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+  <div class="row">
     <div class="col-sm-12">
       <div class="card">
         <div class="card-header">
           <div class="i-block card-body" data-clipboard-text="feather icon-award" data-filter="icon-award" data-toggle="tooltip" title data-original-title="icon-award">
-            <i class="feather icon-award">
-              <h5>Run Institution</h5>
-            </i>
+            <i class="feather icon-award "> </i>
+            <h5>Run Institution</h5>
             </div>
          
         </div>
@@ -28,73 +102,121 @@
   </div>
 
   <div class="card" id="myTabContent">
+   
     <div class="card-body" id="home" role="tabpanel" aria-labelledby="home-tab">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Teacher</th>
-            <th>Subject</th>
-            <th>Qualification</th>
-           
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <h6 class="m-0"><img class="rounded-circle m-r-10" style="width:40px;"
-                  src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="activity-user">Ida Jorgensen</h6>
-            </td>
-            <td>
-              <h6 class="m-0">Math</h6>
-            </td>
-            <td>
-              <h6 class="m-0">Ph.D</h6>
-            </td>
-         
-          </tr>
-
-          <tr>
-            <td>
-              <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;"
-                  src="{% static 'assets/images/user/avatar-2.jpg' %}" alt="activity-user">Albert Andersen</h6>
-            </td>
-            <td>
-              <h6 class="m-0">Science</h6>
-            </td>
-            <td>
-              <h6 class="m-0">B.Sc (Science)</h6>
-            </td>
-            
-          </tr>
-
-          <tr>
-            <td>
-              <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;"
-                  src="{% static 'assets/images/user/avatar-3.jpg' %}" alt="activity-user">Silje Larsen</h6>
-            </td>
-            <td>
-              <h6 class="m-0">Social</h6>
-            </td>
-            <td>
-              <h6 class="m-0">B.Com</h6>
-            </td>
-       
-          </tr>
-          <tr>
-            <td>
-              <h6 class="m-0"><img class="rounded-circle  m-r-10" style="width:40px;"
-                  src="{% static 'assets/images/user/avatar-1.jpg' %}" alt="activity-user">Ida Jorgensen</h6>
-            </td>
-            <td>
-              <h6 class="m-0">Physics</h6>
-            </td>
-            <td>
-              <h6 class="m-0">B.Sc (Physics)</h6>
-            </td>
-         
-          </tr>
-        </tbody>
-      </table>
+      <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+      
+        <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
+      
+        
+        <link rel="stylesheet" href="{% static "show/fonts/icomoon/style.css" %}">
+      
+        <link href="{% static 'show/fullcalendar/packages/core/main.css' %}" rel='stylesheet' />
+        <link href="{% static 'show/fullcalendar/packages/daygrid/main.css' %}"rel='stylesheet' />
+        
+        
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static "show/css/bootstrap.min.css" %}">
+        
+        <!-- Style -->
+        <link rel="stylesheet" href="{% static "show/css/style.css" %}">
+      
+        <title>Calendar #10</title>
+      </head>
+      
+        <!-- [ Main Content ] start -->
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="card">
+              <div class="card-header">
+                <h5>Schedules</h5>
+              </div>
+              <div class="card-block">
+                <div id='calendar-container'>
+                  <div id='calendar'></div>
+                </div>
+                  
+                  
+              
+                  <script src="{% static "show/js/jquery-3.3.1.min.js" %}"></script>
+                  <script src="{% static "show/js/popper.min.js" %}"></script>
+                  <script src="{% static "show/js/bootstrap.min.js" %}"></script>
+              
+                  <script src="{% static 'show/fullcalendar/packages/core/main.js' %}"></script>
+                  <script src="{% static 'show/fullcalendar/packages/interaction/main.js' %}"></script>
+                  <script src="{% static 'show/fullcalendar/packages/daygrid/main.js' %}"></script>
+                  <script src="{% static 'show/fullcalendar/packages/timegrid/main.js' %}"></script>
+                  <script src="{% static 'show/fullcalendar/packages/list/main.js' %}"></script>
+              
+                  
+              
+                  <script>
+                    document.addEventListener('DOMContentLoaded', function() {
+                  var calendarEl = document.getElementById('calendar');
+              
+                  var data=[]
+                  async function loadJsonData() {
+                    try {
+                      
+                        const response = await fetch("{% static 'booking.json' %}") ; // Replace with the actual path to your JSON file
+                        const jsonData = await response.json();
+              
+                        // Store the JSON data in a variable
+                        data =await  jsonData;
+              
+                        // Display the JSON data
+                       console.log(data)
+                    } catch (error) {
+                        console.error('Error loading JSON data:', error);
+                    }
+                }
+                  async function load()
+                  {
+                    const s=await loadJsonData()
+                    const currentDate = new Date();
+              
+              // Get the individual date components (year, month, day)
+              const year = currentDate.getFullYear();
+              const month = String(currentDate.getMonth() + 1).padStart(2, '0'); // Adding 1 to month because months are zero-based
+              const day = String(currentDate.getDate()).padStart(2, '0');
+              
+              // Create a formatted date string (e.g., "yyyy-MM-dd")
+              const formattedDate = `${year}-${month}-${day}`;
+                    var calendar = await new FullCalendar.Calendar(calendarEl, {
+                      plugins: [ 'interaction', 'dayGrid', 'timeGrid', 'list' ],
+                      height: 'parent',
+                      header: {
+                        left: 'prev,next today',
+                        center: 'title',
+                        right: 'dayGridMonth,timeGridWeek,timeGridDay,listWeek'
+                      },
+                      defaultView: 'dayGridMonth',
+                      defaultDate: formattedDate,
+                      navLinks: true, // can click day/week names to navigate views
+                      editable: true,
+                      eventLimit: true, // allow "more" link when too many events
+                      events: data['events']
+                    });
+                
+                   const z= await  calendar.render();
+                  }
+               
+                  load()
+                });
+              
+                  </script>
+              
+                  <script src="{% static "show/js/main.js" %}"></script>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- [ Main Content ] end -->
+      
     </div>
   </div>
 
