Onborarding Work started

--- a/home/templates/includes/sidebar.html
+++ b/home/templates/includes/sidebar.html
@@ -88,7 +88,7 @@
           Page</span></a>
     </li>
     <li data-username="Tab Page" class="nav-item nav-item {% if 'tab_page' in segment %}active{% endif %}"><a href="{% url 'tab' %}" class="nav-link"><span
-      class="pcoded-micon"><i class="feather icon-target"></i></span><span class="pcoded-mtext">OnBoarding</span></a>
+      class="pcoded-micon"><i class="feather icon-layers"></i></span><span class="pcoded-mtext">OnBoarding</span></a>
     </li>
         <li data-username="Sample Page" class="nav-item {% if 'sample_page' in segment %}active{% endif %}"><a href="{% url 'sample_page' %}" class="nav-link"><span
           class="pcoded-micon"><i class="feather icon-target"></i></span><span class="pcoded-mtext">Calendar</span></a>
