--- a/home/templates/pages/tabs.html
+++ b/home/templates/pages/tabs.html
@@ -49,7 +49,7 @@
         
                             <div class="form-group">
                                 <label for="email">Email:</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email"  name="email" required>
                             </div>
 
                             <div class="form-group">
@@ -116,6 +116,12 @@
                                 <label for="username">Username:</label>
                                 <input type="text" class="form-control" id="usernamename" name="username" placeholder="Enter your username" required>
                             </div>
+
+                            <div class="form-group">
+                                <label for="Password">Password</label>
+                                <input type="text" class="form-control" id="Password" name="password" placeholder="Enter your password" required>
+                            </div>
+
                             <div class="form-group">
                                 <label for="email">Email:</label>
                                 <input type="email" class="form-control" id="email" name="email" placeholder="Enter your email" required>
@@ -132,7 +138,7 @@
                             
                             <div class="form-group">
                                 <label for="Subject">Subject</label>
-                                <input type="text" class="form-control" id="Subject" name="Subject" required>
+                                <input type="text" class="form-control" id="Subject" name="subject" required>
                             </div>
 
 
