--- a/home/templates/includes/sidebar.html
+++ b/home/templates/includes/sidebar.html
@@ -1,5 +1,5 @@
 {% load i18n static admin_datta %}
-
+{% load user_group_tags %}
 <nav class="pcoded-navbar">
   <div class="navbar-wrapper">
     <div class="navbar-brand header-logo">
@@ -71,18 +71,22 @@
         {% endif %}
 
         {% if request.user.is_authenticated and not request.user.is_superuser %}
-      
+              
         <li class="nav-item pcoded-menu-caption">
-          <label>Forms & table</label>
+          <label>Functions</label>
         </li>
+        {% if request.user|is_student %}
         <li data-username="form elements advance componant validation masking wizard picker select" class="nav-item {% if 'form_elements' in segment %}active{% endif %}">
           <a href="{% url 'form_elements' %}" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-file-text"></i></span><span class="pcoded-mtext">Booking Form</span></a>
         </li>
+        {% endif %}
+        {% if request.user|is_teacher %}
         <li data-username="Table bootstrap datatable footable" class="nav-item {% if 'basic_tables' in segment %}active{% endif %}">
           <a href="{% url 'basic_tables' %}" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-server"></i></span><span class="pcoded-mtext">Table</span></a>
         </li>
+        {% endif %}
         <li data-username="Profile Page" class="nav-item {% if 'profile' in segment %}active{% endif %}"><a href="{% url 'profile' %}" class="nav-link"><span
           class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile
           Page</span></a>
