--- a/home/templates/pages/index.html
+++ b/home/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/base.html' %}
 {% load static %}
-
+{% load user_group_tags %}
 {% block content %}
 
   <!-- [ Main Content ] start -->
