--- a/home/templates/includes/head.html
+++ b/home/templates/includes/head.html
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="description"
-      content="Run Institution"/>
+      content="Run Institution Organisation"/>
 <meta name="keywords"
       content="Education,Activity,Science"/>
 
