--- a/home/templates/includes/sidebar.html
+++ b/home/templates/includes/sidebar.html
@@ -7,7 +7,7 @@
         <div class="b-bg">
           <i class="feather icon-trending-up"></i>
         </div>
-        <span class="b-title">Datta Able</span>
+        <span class="b-title">Run Institution</span>
       </a>
       <a class="mobile-menu" id="mobile-collapse" href="javascript:"><span></span></a>
     </div>
@@ -91,6 +91,9 @@
           class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Profile
           Page</span></a>
     </li>
+    <li data-username="Sample Page" class="nav-item nav-item {% if 'sample_page' in segment %}active{% endif %}"><a href="{% url 'sample_page' %}" class="nav-link"><span
+      class="pcoded-micon"><i class="feather icon-sidebar"></i></span><span class="pcoded-mtext">Schedule</span></a>
+</li>
     <li data-username="Tab Page" class="nav-item nav-item {% if 'tab_page' in segment %}active{% endif %}"><a href="{% url 'tab' %}" class="nav-link"><span
       class="pcoded-micon"><i class="feather icon-layers"></i></span><span class="pcoded-mtext">OnBoarding</span></a>
     </li>
