--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -15,7 +15,7 @@
 		
 		<!-- Favicon -->
         <link rel="icon" href="{% static "brand/img/favicon.png" %}">
-		
+		<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous' ></script>
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
@@ -163,16 +163,29 @@
 		<!-- End Header Area -->
 		
 		<!-- Slider Area -->
+		<style>
+			#your-class{
+				background-image: url("{% static 'brand/img/education.jpg' %}");
+			}
+			#my-class
+			{
+				background-image: url("{% static 'brand/img/bio-science.jpg' %}");
+			}
+			#our-class
+			{
+				background-image: url("{% static 'brand/img/virus-cells.jpg' %}");
+			}
+		</style>
 		<section class="slider">
 			<div class="hero-slider">
 				<!-- Start Single Slider -->
-			
-				<div class="single-slider"  >
+		
+				<div class="single-slider" id="your-class">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+									<h1>Start To <span>Believe </span> Education <span>Knowledge</span></h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
@@ -186,12 +199,12 @@
 				<!-- End Single Slider -->
 				<!-- Start Single Slider -->
 				
-				<div class="single-slider" >
+				<div class="single-slider" id="my-class" >
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+									<h1>Experment <span>Learning </span> Fun <span>With Doing</span></h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
@@ -204,12 +217,12 @@
 				</div>
 				<!-- Start End Slider -->
 				<!-- Start Single Slider -->
-				<div class="single-slider" style="background-image:url("{% static 'brand/img/slider3.jpg' %}")">
+				<div class="single-slider" id="our-class">
 					<div class="container">
 						<div class="row">
 							<div class="col-lg-7">
 								<div class="text">
-									<h1>We Provide <span>Medical</span> Services That You Can <span>Trust!</span></h1>
+									<h1>Enjoy <span>Learning</span>Powerful <span>Trust</span></h1>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed nisl pellentesque, faucibus libero eu, gravida quam. </p>
 									<div class="button">
 										<a href="#" class="btn">Get Appointment</a>
@@ -235,11 +248,11 @@
 							<div class="single-schedule first">
 								<div class="inner">
 									<div class="icon">
-										<i class="fa fa-ambulance"></i>
+										<i class="fa fa-area-chart"></i>
 									</div>
 									<div class="single-content">
 										<span>Lorem Amet</span>
-										<h4>Emergency Cases</h4>
+										<h4>High Earning Skill</h4>
 										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
@@ -255,7 +268,7 @@
 									</div>
 									<div class="single-content">
 										<span>Fusce Porttitor</span>
-										<h4>Doctors Timetable</h4>
+										<h4>Schedule the Learning AnyTime</h4>
 										<p>Lorem ipsum sit amet consectetur adipiscing elit. Vivamus et erat in lacus convallis sodales.</p>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
@@ -271,11 +284,11 @@
 									</div>
 									<div class="single-content">
 										<span>Donec luctus</span>
-										<h4>Opening Hours</h4>
+										<h4>Schedule Hours</h4>
 										<ul class="time-sidual">
-											<li class="day">Monday - Fridayp <span>8.00-20.00</span></li>
+											<li class="day">Monday - Friday <span>8.00-20.00</span></li>
 											<li class="day">Saturday <span>9.00-18.30</span></li>
-											<li class="day">Monday - Thusday <span>9.00-15.00</span></li>
+											<li class="day">Monday - Thursday <span>9.00-15.00</span></li>
 										</ul>
 										<a href="#">LEARN MORE<i class="fa fa-long-arrow-right"></i></a>
 									</div>
@@ -305,9 +318,9 @@
 						<!-- Start Single features -->
 						<div class="single-features">
 							<div class="signle-icon">
-								<i class="icofont icofont-ambulance-cross"></i>
+								<i class='iconfont icofont-trophy'></i>
 							</div>
-							<h3>Emergency Help</h3>
+							<h3>Train the Champions</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
 						<!-- End Single features -->
@@ -316,9 +329,9 @@
 						<!-- Start Single features -->
 						<div class="single-features">
 							<div class="signle-icon">
-								<i class="icofont icofont-medical-sign-alt"></i>
+								<i class="icofont icofont-education"></i>
 							</div>
-							<h3>Enriched Pharmecy</h3>
+							<h3>Quality Education</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
 						</div>
 						<!-- End Single features -->
@@ -327,7 +340,7 @@
 						<!-- Start Single features -->
 						<div class="single-features last">
 							<div class="signle-icon">
-								<i class="icofont icofont-stethoscope"></i>
+								<i class="icofont icofont-live-support"></i>
 							</div>
 							<h3>Medical Treatment</h3>
 							<p>Lorem ipsum sit, consectetur adipiscing elit. Maecenas mi quam vulputate.</p>
@@ -349,7 +362,7 @@
 							<i class="icofont icofont-home"></i>
 							<div class="content">
 								<span class="counter">3468</span>
-								<p>Hospital Rooms</p>
+								<p>Class</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -360,7 +373,7 @@
 							<i class="icofont icofont-user-alt-3"></i>
 							<div class="content">
 								<span class="counter">557</span>
-								<p>Specialist Doctors</p>
+								<p>Students</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -371,7 +384,7 @@
 							<i class="icofont-simple-smile"></i>
 							<div class="content">
 								<span class="counter">4379</span>
-								<p>Happy Patients</p>
+								<p>Teachers</p>
 							</div>
 						</div>
 						<!-- End Single Fun -->
@@ -535,7 +548,7 @@
 					<div class="col-lg-12">
 						<div class="section-title">
 							<h2>We Offer Different Services To Improve Your Health</h2>
-							<img src="img/section-img.png" alt="#">
+							<img src="{% static "img/section-img.png" %}" alt="#">
 							<p>Lorem ipsum dolor sit amet consectetur adipiscing elit praesent aliquet. pretiumts</p>
 						</div>
 					</div>
