Brand Page Changes

--- a/home/templates/includes/head.html
+++ b/home/templates/includes/head.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<title>Run Institution</title>
+<title>Endeavour Edtech</title>
 <!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 11]>
@@ -12,7 +12,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="description"
-      content="Run Institution Organisation"/>
+      content="Endeavour Edtech"/>
 <meta name="keywords"
       content="Education,Activity,Science"/>
 
