--- a/home/templates/includes/navigation.html
+++ b/home/templates/includes/navigation.html
@@ -7,7 +7,7 @@
       <div class="b-bg">
         <i class="feather icon-trending-up"></i>
       </div>
-      <span class="b-title">Run Institution</span>
+      <span class="b-title">Endeavour Edtech</span>
     </a>
   </div>
   <a class="mobile-menu" id="mobile-header" href="javascript:">
