--- a/home/templates/pages/index.html
+++ b/home/templates/pages/index.html
@@ -87,7 +87,7 @@
         <div class="card-header">
           <div class="i-block card-body" data-clipboard-text="feather icon-award" data-filter="icon-award" data-toggle="tooltip" title data-original-title="icon-award">
             <i class="feather icon-award "> </i>
-            <h5>Run Institution</h5>
+            <h5>Endeavour Edtech</h5>
             </div>
          
         </div>
