Brand Page Changes

--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -569,7 +569,7 @@
 								</div>
 								<h4 class="title">Advanced</h4>
 								<div class="price">
-									<p class="amount">$199<span>/ Per Year</span></p>
+									<p class="amount">&#8377;599<span>/ Per Year</span></p>
 								</div>	
 							</div>
 							<!-- Table List -->
@@ -597,7 +597,7 @@
 								</div>
 								<h4 class="title">Intemediate</h4>
 								<div class="price">
-									<p class="amount">$299<span>/ Per Year</span></p>
+									<p class="amount">&#8377;299<span>/ Per Year</span></p>
 								</div>	
 							</div>
 							<!-- Table List -->
@@ -625,7 +625,7 @@
 								</div>
 								<h4 class="title">Beginner</h4>
 								<div class="price">
-									<p class="amount">$399<span>/ Per Year</span></p>
+									<p class="amount">&#8377;199<span>/ Per Year</span></p>
 								</div>	
 							</div>
 							<!-- Table List -->
