--- a/home/templates/admin/index.html
+++ b/home/templates/admin/index.html
@@ -66,16 +66,12 @@
         <div class="card-header">
           <div class="i-block card-body" data-clipboard-text="feather icon-award" data-filter="icon-award" data-toggle="tooltip" title data-original-title="icon-award">
             <i class="feather icon-award "> </i>
-            <h5>Run Institution</h5>
+            <h5>Endeavour Edtech</h5>
             </div>
          
         </div>
         <div class="card-block">
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          <p> Encouraging students to participate in hands-on activities, discussions, and projects to promote critical thinking and problem-solving.Fostering student engagement through discussions, group work, and collaborative projects, allowing them to learn from peers and apply their knowledge. Integrating practical, real-world examples and scenarios into the curriculum to show the relevance of the subject matter.
           </p>
         </div>
       </div>
