branding Changes completed

--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -597,11 +597,11 @@
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Nullam interdum enim</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Donec ultricies metus</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Pellentesque eget nibh</li>
+								<li><i class="icofont icofont-ui-check"></i>Personalized Learning Paths</li>
+								<li><i class="icofont icofont-ui-check"></i>Adaptive Learning Algorithms</li>
+								<li class="cross"><i class="icofont icofont-ui-check"></i>Real-time Feedback:</li>
+								<li class="cross"><i class="icofont icofont-ui-check"></i>Peer Collaboration</li>
+								<li class="cross"><i class="icofont icofont-ui-check"></i>Gamification</li>
 							</ul>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
@@ -625,11 +625,11 @@
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li><i class="icofont icofont-ui-check"></i>Nullam interdum enim</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Donec ultricies metus</li>
-								<li class="cross"><i class="icofont icofont-ui-close"></i>Pellentesque eget nibh</li>
+								<li><i class="icofont icofont-ui-check"></i>Personalized Learning Paths</li>
+								<li><i class="icofont icofont-ui-check"></i>Adaptive Learning Algorithms</li>
+								<li><i class="icofont icofont-ui-check"></i>Real-time Feedback:</li>
+								<li class="cross"><i class="icofont icofont-ui-close"></i>Peer Collaboration</li>
+								<li class="cross"><i class="icofont icofont-ui-close"></i>Gamification</li>
 							</ul>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
@@ -653,11 +653,11 @@
 							</div>
 							<!-- Table List -->
 							<ul class="table-list">
-								<li><i class="icofont icofont-ui-check"></i>Lorem ipsum dolor sit</li>
-								<li><i class="icofont icofont-ui-check"></i>Cubitur sollicitudin fentum</li>
-								<li><i class="icofont icofont-ui-check"></i>Nullam interdum enim</li>
-								<li><i class="icofont icofont-ui-check"></i>Donec ultricies metus</li>
-								<li><i class="icofont icofont-ui-check"></i>Pellentesque eget nibh</li>
+								<li><i class="icofont icofont-ui-check"></i>Personalized Learning Paths</li>
+								<li><i class="icofont icofont-ui-check"></i>Adaptive Learning Algorithms</li>
+								<li><i class="icofont icofont-ui-close"></i>Real-time Feedback:</li>
+								<li><i class="icofont icofont-ui-close"></i>Peer Collaboration</li>
+								<li><i class="icofont icofont-ui-close"></i>Gamification</li>
 							</ul>
 							<div class="table-bottom">
 								<a class="btn" href="#">Book Now</a>
