--- a/home/templates/pages/contact.html
+++ b/home/templates/pages/contact.html
@@ -19,28 +19,28 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href=" {% static "brand/css/bootstrap.min.css" %}">
 		<!-- Nice Select CSS -->
-		<link rel="stylesheet" href="css/nice-select.css">
+		<link rel="stylesheet" href=" {% static "brand/css/nice-select.css" %}">
 		<!-- Font Awesome CSS -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href=" {% static "brand/css/font-awesome.min.css" %}">
 		<!-- icofont CSS -->
-        <link rel="stylesheet" href="css/icofont.css">
+        <link rel="stylesheet" href=" {% static "brand/css/icofont.css" %}">
 		<!-- Slicknav -->
-		<link rel="stylesheet" href="css/slicknav.min.css">
+		<link rel="stylesheet" href=" {% static "brand/css/slicknav.min.css" %}">
 		<!-- Owl Carousel CSS -->
-        <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" href=" {% static "brand/css/owl-carousel.css" %}">
 		<!-- Datepicker CSS -->
-		<link rel="stylesheet" href="css/datepicker.css">
+		<link rel="stylesheet" href=" {% static "brand/css/datepicker.css" %}">
 		<!-- Animate CSS -->
-        <link rel="stylesheet" href="css/animate.min.css">
+        <link rel="stylesheet" href=" {% static "brand/css/animate.min.css" %}">
 		<!-- Magnific Popup CSS -->
-        <link rel="stylesheet" href="css/magnific-popup.css">
+        <link rel="stylesheet" href=" {% static "brand/css/magnific-popup.css" %}">
 		
 		<!-- Medipro CSS -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href=" {% static "brand/css/normalize.css" %}">
+        <link rel="stylesheet" href=" {% static "brand/style.css" %}">
+        <link rel="stylesheet" href=" {% static "brand/css/responsive.css" %}">
 		
     </head>
     <body>
@@ -369,50 +369,50 @@
 		<!--/ End Footer Area -->
 		
 		<!-- jquery Min JS -->
-        <script src="js/jquery.min.js"></script>
+        <script src=" {% static "brand/js/jquery.min.js" %}"></script>
 		<!-- jquery Migrate JS -->
-		<script src="js/jquery-migrate-3.0.0.js"></script>
+		<script src=" {% static "brand/js/jquery-migrate-3.0.0.js" %}"></script>
 		<!-- jquery Ui JS -->
-		<script src="js/jquery-ui.min.js"></script>
+		<script src=" {% static "brand/js/jquery-ui.min.js" %}"></script>
 		<!-- Easing JS -->
-        <script src="js/easing.js"></script>
+        <script src=" {% static "brand/js/easing.js" %}"></script>
 		<!-- Color JS -->
-		<script src="js/colors.js"></script>
+		<script src=" {% static "brand/js/colors.js" %}"></script>
 		<!-- Popper JS -->
-		<script src="js/popper.min.js"></script>
+		<script src=" {% static "brand/js/popper.min.js" %}"></script>
 		<!-- Bootstrap Datepicker JS -->
-		<script src="js/bootstrap-datepicker.js"></script>
+		<script src=" {% static "brand/js/bootstrap-datepicker.js" %}"></script>
 		<!-- Jquery Nav JS -->
-        <script src="js/jquery.nav.js"></script>
+        <script src=" {% static "brand/js/jquery.nav.js" %}"></script>
 		<!-- Slicknav JS -->
-		<script src="js/slicknav.min.js"></script>
+		<script src=" {% static "brand/js/slicknav.min.js" %}"></script>
 		<!-- ScrollUp JS -->
-        <script src="js/jquery.scrollUp.min.js"></script>
+        <script src=" {% static "brand/js/jquery.scrollUp.min.js" %}"></script>
 		<!-- Niceselect JS -->
-		<script src="js/niceselect.js"></script>
+		<script src=" {% static "brand/js/niceselect.js" %}"></script>
 		<!-- Tilt Jquery JS -->
-		<script src="js/tilt.jquery.min.js"></script>
+		<script src=" {% static "brand/js/tilt.jquery.min.js" %}"></script>
 		<!-- Owl Carousel JS -->
-        <script src="js/owl-carousel.js"></script>
+        <script src=" {% static "brand/js/owl-carousel.js" %}"></script>
 		<!-- counterup JS -->
-		<script src="js/jquery.counterup.min.js"></script>
+		<script src=" {% static "brand/js/jquery.counterup.min.js" %}"></script>
 		<!-- Steller JS -->
-		<script src="js/steller.js"></script>
+		<script src=" {% static "brand/js/steller.js" %}"></script>
 		<!-- Wow JS -->
-		<script src="js/wow.min.js"></script>
+		<script src=" {% static "brand/js/wow.min.js" %}"></script>
 		<!-- Magnific Popup JS -->
-		<script src="js/jquery.magnific-popup.min.js"></script>
+		<script src=" {% static "brand/js/jquery.magnific-popup.min.js" %}"></script>
 		<!-- Counter Up CDN JS -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 		<!-- Google Map API Key JS -->
 		<script src="https://maps.google.com/maps/api/js?key=AIzaSyDGqTyqoPIvYxhn_Sa7ZrK5bENUWhpCo0w"></script>
 		<!-- Gmaps JS -->
-		<script src="js/gmaps.min.js"></script>
+		<script src=" {% static "brand/js/gmaps.min.js" %}"></script>
 		<!-- Map Active JS -->
-		<script src="js/map-active.js"></script>
+		<script src=" {% static "brand/js/map-active.js" %}"></script>
 		<!-- Bootstrap JS -->
-		<script src="js/bootstrap.min.js"></script>
+		<script src=" {% static "brand/js/bootstrap.min.js" %}"></script>
 		<!-- Main JS -->
-		<script src="js/main.js"></script>
+		<script src=" {% static "brand/js/main.js" %}"></script>
     </body>
 </html>
