--- a/home/templates/pages/contact.html
+++ b/home/templates/pages/contact.html
@@ -77,7 +77,7 @@
 							<!-- Contact -->
 							<ul class="top-link">
 								<li><a href="#">About</a></li>
-								<li><a href="#">Doctors</a></li>
+								<li><a href="#">Services</a></li>
 								<li><a href="#">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
