--- a/home/templates/pages/portfolio-details.html
+++ b/home/templates/pages/portfolio-details.html
@@ -19,28 +19,28 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="{% static "brand/css/bootstrap.min.css" %}">
 		<!-- Nice Select CSS -->
-		<link rel="stylesheet" href="css/nice-select.css">
+		<link rel="stylesheet" href="{% static "brand/css/nice-select.css" %}">
 		<!-- Font Awesome CSS -->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static "brand/css/font-awesome.min.css" %}">
 		<!-- icofont CSS -->
-        <link rel="stylesheet" href="css/icofont.css">
+        <link rel="stylesheet" href="{% static "brand/css/icofont.css" %}">
 		<!-- Slicknav -->
-		<link rel="stylesheet" href="css/slicknav.min.css">
+		<link rel="stylesheet" href="{% static "brand/css/slicknav.min.css" %}">
 		<!-- Owl Carousel CSS -->
-        <link rel="stylesheet" href="css/owl-carousel.css">
+        <link rel="stylesheet" href="{% static "brand/css/owl-carousel.css" %}">
 		<!-- Datepicker CSS -->
-		<link rel="stylesheet" href="css/datepicker.css">
+		<link rel="stylesheet" href="{% static "brand/css/datepicker.css" %}">
 		<!-- Animate CSS -->
-        <link rel="stylesheet" href="css/animate.min.css">
+        <link rel="stylesheet" href="{% static "brand/css/animate.min.css" %}">
 		<!-- Magnific Popup CSS -->
-        <link rel="stylesheet" href="css/magnific-popup.css">
+        <link rel="stylesheet" href="{% static "brand/css/magnific-popup.css" %}">
 		
 		<!-- Medipro CSS -->
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="css/responsive.css">
+        <link rel="stylesheet" href="{% static "brand/css/normalize.css" %}">
+        <link rel="stylesheet" href="{% static "brand/style.css" %}">
+        <link rel="stylesheet" href="{% static "brand/css/responsive.css" %}">
 		
     </head>
     <body>
@@ -61,22 +61,7 @@
         </div>
         <!-- End Preloader -->
 		
-		<!-- Get Pro Button -->
-		<ul class="pro-features">
-			<a class="get-pro" href="#">Get Pro</a>
-			<li class="big-title">Pro Version Available on Themeforest</li>
-			<li class="title">Pro Version Features</li>
-			<li>2+ premade home pages</li>
-			<li>20+ html pages</li>
-			<li>Color Plate With 12+ Colors</li>
-			<li>Sticky Header / Sticky Filters</li>
-			<li>Working Contact Form With Google Map</li>
-			<div class="button">
-				<a href="http://preview.themeforest.net/item/mediplus-medical-and-doctor-html-template/full_screen_preview/26665910?_ga=2.145092285.888558928.1591971968-344530658.1588061879" target="_blank" class="btn">Pro Version Demo</a>
-				<a href="https://themeforest.net/item/mediplus-medical-and-doctor-html-template/26665910" target="_blank" class="btn">Buy Pro Version</a>
-			</div>
-		</ul>
-	
+
 		<!-- Header Area -->
 		<header class="header" >
 			<!-- Topbar -->
@@ -87,7 +72,7 @@
 							<!-- Contact -->
 							<ul class="top-link">
 								<li><a href="#">About</a></li>
-								<li><a href="#">Doctors</a></li>
+								<li><a href="#">Services</a></li>
 								<li><a href="#">Contact</a></li>
 								<li><a href="#">FAQ</a></li>
 							</ul>
@@ -127,7 +112,8 @@
 										<ul class="nav menu">
 											<li class="active"><a href="#">Home <i class="icofont-rounded-down"></i></a>
 												<ul class="dropdown">
-													<li><a href="index.html">Home Page 1</a></li>
+													<li><a href="{% url index %}">User Page</a></li>
+													<li><a href="admin/">Admin Page</a></li>
 												</ul>
 											</li>
 											<li><a href="#">Doctos </a></li>
@@ -142,7 +128,7 @@
 													<li><a href="blog-single.html">Blog Details</a></li>
 												</ul>
 											</li>
-											<li><a href="contact.html">Contact Us</a></li>
+											<li><a href="{% url "contact" %}">Contact Us</a></li>
 										</ul>
 									</nav>
 								</div>
