--- a/home/templates/pages/profile.html
+++ b/home/templates/pages/profile.html
@@ -12,13 +12,15 @@
         <div class="card-header">
           <h5>Edit Info</h5>
         </div>
+        <form method="POST">
+          {% csrf_token %}
         <div class="card-block">
           <div class="row">
             <div class="col-sm-12 mb-4">
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1"
-                  aria-describedby="emailHelp" placeholder="Enter email">
+                  aria-describedby="emailHelp" value="{{student.email}}" name="email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
                   else.</small>
               </div>
@@ -26,88 +28,71 @@
             <div class="col-sm-6 mb-4">
               <div class="form-group">
                 <label for="fn">First Name</label>
-                <input type="email" class="form-control" id="fn" aria-describedby="emailHelp"
-                  placeholder="Enter email">
+                <input type="text" class="form-control" id="fn" aria-describedby="emailHelp"
+                 value="{{student.first_name}}" name="first_name">
               </div>
             </div>
             <div class="col-sm-6 mb-4">
               <div class="form-group">
                 <label for="ln">Last Name</label>
-                <input type="email" class="form-control" id="ln" aria-describedby="emailHelp"
-                  placeholder="Enter email">
+                <input type="text" class="form-control" id="ln" aria-describedby="textHelp"
+                 value="{{student.last_name}}" name="last_name">
               </div>
             </div>
             <div class="col-sm-6 mb-4">
               <div class="form-group">
                 <label for="ln">Age</label>
-                <input type="email" class="form-control" id="ln" aria-describedby="emailHelp"
-                  placeholder="Enter Age">
+                <input type="text" class="form-control" id="ln" aria-describedby="textHelp"
+                 value="{{student.age}}" name="age">
               </div>
             </div>
             <div class="col-sm-12 mb-4">
               <div class="form-group">
                 <label for="ln">Phone Number</label>
-                <input type="email" class="form-control" id="ln" aria-describedby="emailHelp"
-                  placeholder="Enter Phone number">
+                <input type="text" class="form-control" id="ln" aria-describedby="textHelp"
+                 value="{{student.phone_number}}" name="phone_number">
               </div>
             </div>
-            <div class="col-sm-12 mb-4">
+            {% comment %} <div class="col-sm-12 mb-4">
               <div class="form-group">
                 <label for="ln">Role</label>
-                <input type="email" class="form-control" id="ln" aria-describedby="emailHelp"
+                <input type="text" class="form-control" id="ln" aria-describedby="textHelp"
                   placeholder="Role Displayed">
-                  <small id="emailHelp" class="form-text text-muted">This shows your role in this organisation
-                    </small>
+                  <small id="textHelp" class="form-text text-muted">This shows your role in this organisation
+                    </small> 
               </div>
-            </div>
+            </div> {% endcomment %}
             <div class="col-sm-12 mb-4">
               <div class="form-group">
                 <label for="add">Address</label>
-                <input type="email" class="form-control" id="add" aria-describedby="emailHelp"
-                  placeholder="Enter email">
+                <input type="text" class="form-control" id="add" aria-describedby="textHelp"
+                  value={{student.address}} name="address">
                 <small id="addd" class="form-text text-muted">This is your shipments address</small>
               </div>
             </div>
+            
             <div class="col-sm-12 mb-4">
               <div class="form-group">
                 <label for="abt">About Info</label>
-                <textarea type="email" class="form-control" id="abt" aria-describedby="emailHelp"
-                  placeholder="Bio"></textarea>
-                <small id="abf" class="form-text text-muted">We'll show this on your profile.</small>
+                <textarea class="form-control" id="abt" name="about_info"  >{{student.about_info}}</textarea>
               </div>
             </div>
+
+
+            <div class="col-sm-12 mb-4">
+              <div class="form-group">
+            <button type="submit" class="btn btn-danger">Update</button>
+              </div>
+            </div>
+
+          </form>
           </div>
         </div>
       </div>
+     
+    
     </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <div class="card-block">
-          <div class="d-flex align-items-center justify-content-center flex-column">
-            <div class="w-50 p-3">
-              <img src="https://via.placeholder.com/500" alt="profile image"
-                class="img-fluid rounded-circle">
-            </div>
-            <div class="text-center">
-              <h4 class="font-weight-bold h6">Author Name</h4>
-              <p class="font-italic text-muted">Lorem ipsum dolor.</p>
-            </div>
-          </div>
-
-          <div class="small font-weight-light mt-4 text-center text-muted">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos
-              esse excepturi fugiat id numquam? Enim illo, perferendis. Eum, ratione,
-              voluptas?</p>
-          </div>
-          <div class="d-flex justify-content-center align-items-center">
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-facebook"></i></a>
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-twitter"></i></a>
-            <a href="#" class="h6 text-muted d-block m-1"><i class="icon feather icon-instagram"></i></a>
-
-          </div>
-        </div>
-      </div>
-    </div>
+ 
   </div>
   <!-- [ Main Content ] end -->
 
