--- a/static/brand/style.css
+++ b/static/brand/style.css
@@ -591,8 +591,16 @@ body{
 =============================*/
 .slider .single-slider {
 	height: 600px;
-	background-size: cover;
-	background-position: center;
+	background-size: 800px;
+	margin-bottom: 100px;
+	background-position: right;
+	background-repeat:no-repeat;
+}
+#animContainer{
+	height: 600px;
+	background-size: 800px;
+	margin-bottom: 100px;
+	background-position: right;
 	background-repeat:no-repeat;
 }
 .slider .single-slider .text{
@@ -609,16 +617,18 @@ body{
 	margin: 0;
 	padding: 0;
 	line-height: 42px;
-	text-shadow: 3px 3px 0px black;
+	
 }
 .slider .single-slider h1 span{
 	color:#1173ce;
-	text-shadow: 3px 3px 0px black;
+	
 }
 .slider .single-slider p {
-	color: #808080;
+	color: #1173ce;
 	margin-top: 27px;
-	font-weight: 700;
+	font-weight: 1000;
+	font-size: 20px;
+	
 }
 .slider .single-slider .button{
 	margin-top:30px;
@@ -658,9 +668,7 @@ body{
 	font-size: 26px;
 	position: absolute;
 	margin: 0;
-	-webkit-transition: all 0.4s ease;
-	-moz-transition: all 0.4s ease;
-	transition: all 0.4s ease;
+
 	padding: 0;
 	border-radius: 50%;
 }
@@ -700,6 +708,7 @@ body{
 }
 .schedule .schedule-inner {
 	position: relative;
+	top: 100px;
 	transform: translateY(-50%);
 	z-index:9;
 }
@@ -835,7 +844,7 @@ body{
 	Start Feautes CSS
 ===============================*/
 .Feautes{
-	padding-top:0;
+	padding: top 500px;;
 }
 .Feautes.index2{
 	padding-top:100px;
@@ -846,6 +855,7 @@ body{
 .Feautes .single-features{
 	text-align:center;
 	position:relative;
+	
 	padding:10px 20px;
 }
 .Feautes .single-features::before {
@@ -971,6 +981,7 @@ body{
 	font-weight:600;
 	color:#2C2D3F;
 	position:relative;
+	
 	padding-bottom:20px;
 	margin-bottom:24px;
 }
@@ -978,7 +989,7 @@ body{
 	position:absolute;
 	content:"";
 	left:0;
-	bottom:0;
+	bottom: 10px;
 	height:2px;
 	width:50px;
 	background:#1a76d1;
@@ -1145,14 +1156,14 @@ body{
 	height:100%;
 	width:100%;
 }
-/* .portfolio .single-pf:before{
+.portfolio .single-pf:before{
 	position:absolute;
 	content:"";
 	left:0;
 	top:0;
 	height:100%;
 	width:100%;
-	background:#1a76d1;
+	background: #D3D3D3;
 	opacity:0;
 	visibility:hidden;
 	-webkit-transition:all 0.4s ease;
@@ -1161,10 +1172,10 @@ body{
 	z-index:1;
 }
 .portfolio .single-pf:hover:before{
-	opacity:0.7;
+	opacity:0.3;
 	visibility:visible;
-} */
-/* .portfolio .single-pf .btn {
+}
+.portfolio .single-pf .btn {
 	color: #1a76d1;
 	z-index: 3;
 	background: #fff;
@@ -1187,21 +1198,11 @@ body{
 	margin-left: -75px;
 	margin-top: -24px;
 	border-radius:4px;
-	width: 300px;
-					border: 1px solid #ccc;
-					margin: 10px;
-					padding: 10px;
-					background-color: #f9f9f9;
-					border-radius: 10px;
-					box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
-.portfolio .single-pf:hover .btn{
+.portfolio .single-pf:hover .testimonial-card{
 	opacity:1;
 	visibility:visible;
-	width: 300px;
-					
-
-} */
+}
 .portfolio .single-pf .btn:hover{
 	color:#fff;
 }
@@ -1232,10 +1233,10 @@ body{
 	transition: all 0.4s ease;
 	box-shadow: 0px 0px 10px #0000001a;
 }
-/* .pf-details .image-slider .owl-carousel .owl-nav div:hover{
+.pf-details .image-slider .owl-carousel .owl-nav div:hover{
 	color:#fff;
-	background:#1A76D1;
-} */
+	background:#cfcfcf;
+}
 .pf-details .image-slider .owl-carousel .owl-controls .owl-nav .owl-prev{
 	left:20px;
 }
@@ -1713,7 +1714,7 @@ body{
 	color:#fff;
 }
 .pricing-table .btn:before{
-	background:#2C2D3F;
+	background:#2C2D3F
 }
 .pricing-table .btn:hover{
 	color:#fff;
@@ -1730,7 +1731,7 @@ body{
 	Start Clients CSS
 ==========================*/
 .clients{
-	background-image:url('img/client-bg.jpg');
+	
 	background-size:cover;
 	background-position:center;
 	padding:100px 0px;
@@ -1745,6 +1746,18 @@ body{
 	text-align: center;
 	float: none;
 	padding: 0 35px;
+}
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel .owl-nav button.owl-next {
+  background-color: blue;
+  color: rgb(179, 3, 3);
+  font-size: 24px; /* Adjust the font size as needed */
+  border-radius: 50%; /* Optional: Make the button circular */
+}
+
+.owl-carousel .owl-nav button.owl-prev:hover,
+.owl-carousel .owl-nav button.owl-next:hover {
+  background-color: darkblue; /* Change the hover color if desired */
 }
 /*========================
 	End Clients CSS
