lotties js added locally

--- a/home/templates/pages/Teachers.html
+++ b/home/templates/pages/Teachers.html
@@ -837,7 +837,7 @@
 		</script>
 		<!--/ End Footer Area -->
 		<!-- Scripts -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.5/lottie.min.js'></script> 
+		<script src="{% static "brand/js/lottie.min.js" %}"></script> 
 		<!-- jquery Min JS -->
         <script src="{% static "brand/js/jquery.min.js" %}"></script>
 		<!-- jquery Migrate JS -->
