--- a/home/templates/pages/contact.html
+++ b/home/templates/pages/contact.html
@@ -348,7 +348,7 @@
 			var staticPath = "{% static 'brand/img' %}";
 		</script>
 		<!-- Scripts -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.5/lottie.min.js'></script> 
+		<script src="{% static "brand/js/lottie.min.js" %}"></script> 
 <!-- Counter Up CDN JS -->
 <script src="{% static "brand/js/waypoints.min.js" %}"></script>
 		<!-- jquery Min JS -->
