--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -1081,7 +1081,7 @@
 		</script>
 		<!--/ End Footer Area -->
 		<!-- Scripts -->
-		<script src='https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.10.2/lottie.min.js'></script> 
+		<script src="{% static "brand/js/lottie.min.js" %}"></script> 
 		<!-- jquery Min JS -->
         <script src="{% static "brand/js/jquery.min.js" %}"></script>
 		<!-- jquery Migrate JS -->
