main vector and teacher vector added

--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -180,8 +180,25 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-lg-6" style="height:100px, width:100px">
-								<div class="animContainer" id="animContainer"> </div> 
+							<div class="col-lg-6 mb-2">
+								<br>
+								<br>
+								<br>
+								<div style="max-width: 400px; margin: 0 auto;">
+									<video width="100%" height="auto"  controls autoplay muted loop>
+										<source src="{% static "brand/img/main.mp4"  %}" type="video/mp4">
+										Your browser does not support the video tag.
+									</video>
+								  </div>
+							
+								{% comment %} <br>
+								<br>
+								<br>
+								<br>
+								<div class="animContainer mb-2" id="animContainer1"> 
+									
+								<img class="mb-2"src="{% static "brand/img/main.gif"  %}" style="height:10000px,width:4000px"alt="Animated GIF"> {% endcomment %}
+								</div> 
 							</div>
 						</div>
 					</div>
