--- a/home/templates/pages/Student.html
+++ b/home/templates/pages/Student.html
@@ -327,8 +327,14 @@
 						</form>
 					</div>
 					<div class="col-lg-6 col-md-12 ">
-						<div class="appointment-image" id="appointment-image">
-							
+						<div class="appointment-image" id="appointment-image1">
+							<div style="max-width: 400px; margin: 0 auto;">
+								<video width="100%" height="auto"  controls autoplay muted loop>
+									<source src="{% static "brand/img/appoint.mp4"  %}" type="video/mp4">
+									Your browser does not support the video tag.
+								</video>
+							  </div>
+						
 						</div>
 					</div>
 				</div>
